# PyMigrator

./: .gitignore  LICENSE  README.md  paradox_configgen.py  pyproject.toml  requirements.txt
migrator/: __init__.py  cli.py  config.py  ddl_generator.py  loader.py  log.py  schema_mapper.py
migrator/connectors/: base.py  dbf.py  factory.py  paradox.py  parsers.py  sybase.py
