[project]
name = "pymigrator"
version = "0.1.0"
description = "Config-driven migration from DBF/Sybase to Oracle"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{ name = "George Panagopoulos" }]
dependencies = [
  "asttokens==3.0.0",
  "bitarray==3.7.1",
  "bitstring==4.3.1",
  "cffi==2.0.0",
  "colorama==0.4.6",
  "comm==0.2.3",
  "cryptography==45.0.7",
  "dbfread==2.0.7",
  "debugpy==1.8.16",
  "decorator==5.2.1",
  "executing==2.2.1",
  "fdb==2.0.4",
  "firebird-base==2.0.2",
  "firebird-driver==2.0.2",
  "interbase==1.0.1",
  "ipykernel==6.30.1",
  "ipython==9.5.0",
  "ipython_pygments_lexers==1.1.1",
  "jedi==0.19.2",
  "jupyter_client==8.6.3",
  "jupyter_core==5.8.1",
  "matplotlib-inline==0.1.7",
  "nest-asyncio==1.6.0",
  "numpy==2.0.2",
  "oracledb==2.4.1",
  "packaging==25.0",
  "pandas==2.2.2",
  "parso==0.8.5",
  "platformdirs==4.4.0",
  "prompt_toolkit==3.0.52",
  "protobuf==5.29.5",
  "psutil==7.0.0",
  "pure_eval==0.2.3",
  "pycparser==2.23",
  "Pygments==2.19.2",
  "pyodbc==5.2.0",
  "pypxlib==2.5",
  "python-dateutil==2.9.0.post0",
  "pytz==2025.2",
  "pywin32==311",
  "PyYAML==6.0.2",
  "pyzmq==27.1.0",
  "six==1.17.0",
  "stack-data==0.6.3",
  "tornado==6.5.2",
  "traitlets==5.14.3",
  "tzdata==2025.2",
  "wcwidth==0.2.13"
]

[project.scripts]
pymigrator = "migrator.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"